--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 /.idea/
 /lib/
 /adventofcode_2021.iml
+/target
+/classes
+/checkouts
+profiles.clj
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+.hgignore
+.hg/
